# RedLiliumEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build_shaders.bat  build_shaders.sh  conanfile.txt  conanws.yml  config.sh
Resources/Models/: torus.dae
Resources/RenderDocs/: RequiredTechiques.txt
Resources/Shaders/: Camera.glsl  IncludeTest.glsl
Sources/: Common.cmake
Sources/Core/: ApplicationSettings.cpp  ApplicationSettings.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.h  ExternalInclude.h  FileSystem.cpp  FileSystem.h  Flags.h  InputEvent.h  Mesh.cpp  Mesh.h  Restorable.h  StdInclude.h  Texture.h
Sources/Demos/: CMakeLists.txt  Commands.h  EnttDemo.cpp  HelloWorld.cpp  HelloWorld_SDL.cpp  HelloWorld_imgui.cpp  HelloWorld_opengl3.cpp  LoadSceneDemo.cpp  Main.cpp  RenderPipeline.cpp  Render_Triangle.cpp  StartEditor.cpp
Sources/Ecs/: CMakeLists.txt  Component.cpp  Component.h  ComponentContainer.cpp  ComponentContainer.h  Entity.cpp  Entity.h  MetaClass.cpp  MetaClass.h  MetaClass.hpp  Scene.cpp  Scene.h  Scene.hpp  View.cpp  View.h  View.hpp  World.cpp  World.h
Sources/Editor/: Action.cpp  Action.h  CMakeLists.txt  Editor.cpp  Editor.h  Event.cpp  Event.h
Sources/Geometrics/: CMakeLists.txt  Context.cpp  Context.h  Geometrics.cpp  GeometricsContext.cpp  GeometricsContext.h  GeometricsRenderState.cpp  GeometricsScopedState.cpp  Manager.cpp  Manager.h  RenderState.cpp  RenderState.h  ScopedState.cpp  ScopedState.h
Sources/Nodes/: CMakeLists.txt  NodesEngine.cpp  NodesEngine.h
Sources/NodesEditor/: CMakeLists.txt  NodesEditor.cpp  NodesEditor.h  NodesEditorSystem.cpp  NodesEditorSystem.h  UserInput.cpp  UserInput.h
Sources/NodesEditorImgui/: CMakeLists.txt  EditorImguiApplication.cpp  EditorImguiApplication.h  NodesCollectionWindow.cpp  NodesCollectionWindow.h  NodesEditorWindow.cpp  NodesEditorWindow.h  PropertyGridWindow.cpp  PropertyGridWindow.h
Sources/Pipeline/: AssimpLoader.cpp  AssimpLoader.h  CMakeLists.txt  ImguiPipelineApplication.cpp  ImguiPipelineApplication.h  PipelineCommon.h  RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h
Sources/Reflection/: BoxedObject.cpp  CMakeLists.txt  ReflectedVector.h  Serialization.h  Type.cpp  Type.h  TypesManager.cpp  TypesManager.h
Sources/Render/: CMakeLists.txt  ConstantBuffer.cpp  ConstantBuffer.h  GpuBuffer.cpp  GpuBuffer.h  GpuMesh.cpp  GpuMesh.h  GpuTexture.cpp  GpuTexture.h  GpuTextureManager.cpp  GpuTextureManager.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  RenderCommon.h  RenderContext.cpp  RenderContext.h  RenderDevice.cpp  RenderDevice.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  StructuredBuffer.cpp  Uniform.cpp  Uniform.h  VertexBuffer.cpp  VertexBuffer.h  VertexDeclaration.cpp  VertexDeclaration.h  Viewport.cpp
Sources/Scene/: CMakeLists.txt  Component.cpp  Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneView.h  pch.h
Sources/Tests/: CMakeLists.txt  main.cpp
Sources/Tests/Core/: Scene.cpp
Sources/imgui/: CMakeLists.txt  application.cpp  application.h  imgui_draw.cpp  imgui_impl_sdl.cpp  imgui_internal.h  imgui_widgets.cpp  main.cpp
ci/travis/: install-linux.sh
resources/shaders/: depth_buffer.vert  obj_mesh.frag  obj_mesh.vert  texture.frag  texture.frag.spv  texture.vert  triangle.vert  triangle.vert.spv
src/: common.cmake  main.cpp  mesh.h  resources_manager.cpp  resources_manager.h
src/Core/: CMakeLists.txt  Common.h  CommonDefs.h  Flags.h  Mesh.cpp  Mesh.h  RedLiliumObject.cpp  RedLiliumObject.h  Signal.h  SmartPointers.h  StdInclude.h  conanfile.py  pch.h
src/DB/: CMakeLists.txt  Host.cpp  Host.h  Nodes.cpp  Nodes.h  Stream.cpp  Stream.h
src/Demo/: CMakeLists.txt  DemoApplication.cpp  GuiApplication.cpp  GuiApplication.h
src/Demos/: ArgsParser.cpp  ArgsParser.h  CMakeLists.txt  Commands.h  GuiApplicationDemo.cpp  HelloWorld.cpp  Main.cpp  TaskManagerDemo.cpp  WindowsManagerDemo.cpp
src/EditorFramework/: Action.cpp  Action.h  CMakeLists.txt  Editor.cpp  Editor.h  Event.h  conanfile.py  pch.h
src/Gui2/: CMakeLists.txt  Component.cpp  Component.h  Context.cpp  Context.h  Entity.cpp  Entity.h  GeometryTree.h  Gui2Forward.h  Style.h  Widget.cpp  Widget.h  Window.cpp
src/GuiBgfxAdapter/: BgfxEnvironment.cpp  BgfxEnvironment.h  BgfxGuiApplication.cpp  BgfxGuiApplication.h  BgfxKeysMapping.cpp  BgfxKeysMapping.h  BgfxWindow.cpp  BgfxWindow.h  CMakeLists.txt  GuiApplication.cpp  GuiApplication.h  SilentGuiApplication.cpp  SilentGuiApplication.h
src/GuiFramework/: CMakeLists.txt  Common.cpp  Common.h  GuiApplication.cpp  GuiApplication.h  GuiFramework.h  GuiManager.cpp  GuiManager.h  GuiRecorder.cpp  GuiRecorder.h  INativeEnviroment.h  INativeWindow.h  Panel.cpp  Panel.h  Widget.cpp  Widget.h  Widget.hpp
src/GuiFramework/Internal/: TextWidgetsHelper.cpp  TextWidgetsHelper.h
src/GuiFramework/Widgets/: CanvasLayout.cpp  CanvasLayout.h  ClickableWidget.cpp  ClickableWidget.h  ColoredRectangle.cpp  ColoredRectangle.h  Label.cpp  Label.h  Layout.cpp  Layout.h  StackLayout.cpp  StackLayout.h  TextField.cpp  TextField.h
src/GuiWidgets/: CMakeLists.txt  CheckBox.cpp  CheckBox.h  ColumnLayout.cpp  ColumnLayout.h  ComboBox.cpp  ComboBox.h  DefaultWidgetsSettings.h  GridLayout.cpp  GridLayout.h  LabeledButton.cpp  LabeledButton.h  TextBox.cpp  TextBox.h  TextField.cpp  TextField.h  pch.h
src/Render/: CMakeLists.txt  ConstantBuffer.cpp  Context.cpp  Device.cpp  Device.h  DeviceInfo.cpp  DeviceInfo.h  DeviceMemoryHeap.cpp  DeviceMemoryHeap.h  DeviceMemoryType.cpp  DeviceMemoryType.h  DeviceQueue.cpp  DeviceQueue.h  DeviceQueueFamily.cpp  DeviceQueueFamily.h  (+14 more)
src/tests/: CMakeLists.txt  Tests.h  pch.h
src/tests/Core/: Signal.cpp  SmartPointers.cpp
src/tests/EditorFramework/: TestEditor.cpp  TestEditor.h
src/tests/GuiFramework/: StackLayout.cpp  Widget.cpp
src/tests/Render/: System.cpp
src/tests/TaskManager/: CapturedTask.cpp  TaskScheduler.cpp  TaskSheduler.cpp
tests/: CMakeLists.txt  main.cpp
(+165 files in other folders)
